<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">StockTracker</string>
    <string name="login_text">로그인</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="join">회원가입</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="password_text">비밀번호</string>
    <string name="password_check_text">비밀번호 확인</string>
    <string name="phone">핸드폰번호</string>
    <string name="find_id_phrase">아이디찾기문구</string>
    <string name="find_id_phrase_ex">ex)나의아이디</string>
    <string name="nickname">닉네임</string>
    <string name="auto_login">자동 로그인</string>
    <string name="update">수정하기</string>

    <string name="country_text">나라</string>
    <string name="stock_name_text">종목명</string>
    <string name="ticker_text">(종목코드)</string>
    <string name="current_price_text">현재가</string>
    <string name="blended_price_text">평균단가</string>
    <string name="profit_rate_text">수익률</string>
    <string name="holding_text">보유수량</string>
    <string name="amount_price_text">평가금액</string>
    <string name="profit_text">수익</string>

    <string name="buy_amount_text">매수량</string>
    <string name="sell_amount_text">매도량</string>
    <string name="buy_price_text">매수가</string>
    <string name="sell_price_text">매도가</string>
    <string name="date_text">날짜</string>
    <string name="time_text">시간</string>
    <string name="enter_text">등록</string>
    <string name="cancel_text">취소</string>

    <string name="home_total_price">투자금액</string>
    <string name="buy_stock_text">Buy Stock</string>
    <string name="update_user">회원정보수정</string>
    <string name="delete_user">회원탈퇴</string>
    <string name="logout">로그아웃</string>

    <string name="friend_text">친구</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>