<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/_textView7"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock_name_text" />

        <AutoCompleteTextView
            android:id="@+id/buy_stock_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:hint="@string/stock_name_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/_textView6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/buy_price_text" />

        <EditText
            android:id="@+id/buy_price_edit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:inputType="number"
            android:hint="@string/buy_price_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/_textView11"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/buy_amount_text" />

        <EditText
            android:id="@+id/buy_amount_edit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:inputType="number"
            android:hint="@string/buy_amount_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/_textView12"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/date_text" />

        <EditText
            android:id="@+id/buy_date_edit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:inputType="date"
            android:hint="@string/date_text" />

        <EditText
            android:id="@+id/buy_time_edit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:inputType="time"
            android:hint="@string/time_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/enter_text" />

        <Button
            android:id="@+id/cancel_buy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_text" />
    </LinearLayout>

</LinearLayout>