<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.UpdateUserActivity">

    <TextView android:id="@+id/join_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="20dp"
        android:text="@string/update" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView android:id="@+id/text_id"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/id" />

        <TextView android:id="@+id/id"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:layout_weight="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView android:id="@+id/text_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/password_text" />

        <EditText android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:inputType="textPassword"
            android:hint="@string/password_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView android:id="@+id/text_password_check"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/password_check_text" />

        <EditText android:id="@+id/password_check"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:inputType="textPassword"
            android:hint="@string/password_check_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView android:id="@+id/text_phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/phone" />

        <EditText android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:inputType="phone"
            android:maxLength="13"
            android:hint="@string/phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView android:id="@+id/text_find_id_phrase"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:text="@string/find_id_phrase" />

        <EditText android:id="@+id/find_id_phrase"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:hint="@string/find_id_phrase_ex" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView android:id="@+id/text_nickname"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:text="@string/nickname" />

        <EditText android:id="@+id/nickname"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:hint="@string/nickname" />

    </LinearLayout>

    <Button
        android:id="@+id/update_btn"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_margin="24dp"
        android:background="@drawable/btn_mint"
        android:gravity="center"
        android:text="@string/update" />

</LinearLayout>