<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.FindPasswordActivity">

    <TextView android:id="@+id/find_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="90dp"
        android:text="@string/find_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView android:id="@+id/text_find_password_id"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="@string/id" />

        <EditText android:id="@+id/find_password_id"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:hint="@string/id" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView android:id="@+id/text_find_password_phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="@string/phone" />

        <EditText android:id="@+id/find_password_phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:hint="@string/phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView android:id="@+id/text_find_password_phrase"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:textSize="15sp"
            android:text="@string/find_id_phrase" />

        <EditText android:id="@+id/find_password_phrase"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:hint="@string/find_id_phrase_ex" />

    </LinearLayout>

    <Button android:id="@+id/find_password_btn"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@drawable/btn_mint"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/find_password" />

</LinearLayout>