<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/_textView9"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/stock_name_text" />

        <TextView
            android:id="@+id/sell_stock_name"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/average_price_text" />

        <EditText
            android:id="@+id/sell_price_edit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:hint="@string/average_price_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/sell_amount_text" />

        <EditText
            android:id="@+id/sell_amount_edit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:hint="@string/sell_amount_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/date_text" />

        <EditText
            android:id="@+id/sell_date_edit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="datetime"
            android:hint="@string/date_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/sell_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/enter_text" />

        <Button
            android:id="@+id/cancel_sell_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_text" />
    </LinearLayout>
</LinearLayout>